--- a/Final_Project - CataWard/assets/styles/about.css
+++ b/Final_Project - CataWard/assets/styles/about.css
@@ -1,78 +1,24 @@
-h1 {
-    font-size: 58px;
-    text-shadow: 0px 6px 1px rgba(15, 169, 100, 0.2);
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+main{
+    font: small "Roboto Mono", monospace;
 }
 
-h2 {
-
-    font-size: 32px;
+h1, h2 {
     text-align: center;
     text-shadow: 0px 6px 1px rgba(15, 169, 100, 0.2);
-    
 }
 
-.michael {
+.members {
     display: flex;
     padding: 5px;
     font-size: 10px;
-    font-family: "Georgia";
     flex-direction: column;
     align-items: center;
 }
 
-.michael img {
+.members img {
     border: 3px solid darkolivegreen;
     border-radius: 50%; 
     width: 100px;
     height: 100px; 
-}
-
-.russel {
-    display: flex;
-    padding: 5px;
-    font-size: 10px;
-    font-family: "Georgia";
-    flex-direction: column;
-    align-items: center;
-}
-
-.russel img {
-    border: 3px solid darkolivegreen;
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-}
-
-.cj {
-    display: flex;
-    padding: 5px;
-    font-size: 10px;
-    font-family: "Georgia";
-    flex-direction: column;
-    align-items: center;
-}
-
-.cj img {
-    border: 3px solid darkolivegreen;
-    border-radius:  50%;
-    width: 100px;
-    height: 100px;
-}
-
-
-.val {
-
-    display: flex;
-    padding: 5px;
-    font-size: 10px;
-    font-family: "Georgia";
-    flex-direction: column;
-    align-items: center;
-}
-
-.val img {
-    border: 3px solid darkolivegreen;
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
 }
