--- a/Final_Project - CataWard/assets/styles/index.css
+++ b/Final_Project - CataWard/assets/styles/index.css
@@ -1,5 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Roboto:wght@100;300;400;500;700;900&display=swap');
 
+main{
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block; 
+}
 
 .image-section {
     position: relative; 
@@ -17,29 +23,53 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    z-index: 0;
+}
+
+.card-container{
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    z-index: 0;
 }
 
 .card-heading {
-    font: small "Roboto Mono", monospace;
-    max-width: 600px; 
-    padding: 15px; 
+    max-width: 900px; 
+    padding: 20px; 
     background-color: rgba(168, 174, 169, 0.8); 
     text-align: left;
-    z-index: 1; 
+    border-radius: 20px;
+    z-index: inherit;
 }
 
 .card-heading h1 {
+    text-transform: uppercase;
+    font-family:'Archivo Black', sans-serif;
     text-align: center;
-    margin-bottom: 10px; 
+    margin-bottom: 20px; 
+    font-size: 2pc;
 }
 
+.card-heading h2 {
+    font: small, "Roboto Mono", monospace;
+    padding: 10px;
+    font-weight: 300;
+    font-size: 25px;
+}
 
 .img-container{
+    margin: 20px;
     border: 2px solid green;
     height: 200px; 
     width: 200px; 
     border-radius: 50%;
 }
+
+.img-container:hover{
+    border: 5px solid rgb(155, 207, 11);
+}
+
 
 
 article{
@@ -61,24 +91,12 @@ article{
 }
 
 h2 > a{
+    font-family:'Archivo Black', sans-serif;
     text-decoration: none;
-    color: rgb(7, 67, 47);;
+    color: rgb(7, 67, 47);
 }
 
 h2 > a:hover{
     text-decoration: underline;
     color: rgb(11, 99, 70);
-}
-
-
-/* Change thiss */
-@media (max-width: 400px) {
-    article{
-      width: 100%; /* Change container width to 100% for smaller screens */
-      padding: 0 20px; /* Add padding to the container for spacing */
-    }
-    
-    .title-container {
-      width: calc(50% - 20px); 
-    }
 }
