--- a/Final_Project - CataWard/assets/styles/tsunami.css
+++ b/Final_Project - CataWard/assets/styles/tsunami.css
@@ -13,7 +13,8 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    margin-top: -40%;
+    margin-top: -30%;
+    margin-bottom: -35px;
 }
 
 .content-container {
@@ -26,15 +27,17 @@
 .content-container h1, h2, h3 {
     font-family:'Archivo Black', sans-serif;
     font-size: 30px;
+    text-align: justify;
 }
 
 .content-container p, ul {
     font-size: 20px;
+    text-align: justify;
 }
 
-.content-container img{
+.content-container img {
     width: 900px; 
     height: auto;
-    align-items: center;
+    display: block;
+    margin: 0 auto;
 }
-
