--- a/Final_Project - CataWard/assets/styles/typhoon.css
+++ b/Final_Project - CataWard/assets/styles/typhoon.css
@@ -13,7 +13,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    margin-top: -40%;
+    margin-bottom: -30%;
 }
 
 .content-container {
