--- a/Final_Project - CataWard/assets/styles/about.css
+++ b/Final_Project - CataWard/assets/styles/about.css
@@ -7,9 +7,14 @@
     box-sizing: border-box; 
 }
 
-h1, h2 {
+h1{
     text-align: center;
     text-shadow: 0px 6px 1px rgba(15, 169, 100, 0.2);
+}
+
+h1, h2, h3 {
+    font-family:'Archivo Black', sans-serif;
+    font-size: 30px;
 }
 
 .members {
