--- a/Final_Project - CataWard/assets/styles/about.css
+++ b/Final_Project - CataWard/assets/styles/about.css
@@ -1,11 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
-main{
-    font: small "Roboto Mono", monospace;
+
+.content-container {
+    max-width: 900px; 
+    margin: 0 auto;
+    padding: 20px; 
+    box-sizing: border-box; 
 }
 
-h1, h2 {
+h1{
     text-align: center;
     text-shadow: 0px 6px 1px rgba(15, 169, 100, 0.2);
+}
+
+h1, h2, h3 {
+    font-family:'Archivo Black', sans-serif;
+    font-size: 30px;
 }
 
 .members {
